missingkids/less/css/application.css
/* ... */
@media (min-width: 1200px) {
  .col-lg-offset-right-12 {
    margin-right: 100%;
  }
  .col-lg-offset-right-11 {
    margin-right: 91.66666667%;
  }
  .col-lg-offset-right-10 {
    margin-right: 83.33333333%;
  }
  .col-lg-offset-right-9 {
    margin-right: 75%;
  }
  .col-lg-offset-right-8 {
    margin-right: 66.66666667%;
  }
  .col-lg-offset-right-7 {
    margin-right: 58.33333333%;
  }
  .col-lg-offset-right-6 {
    margin-right: 50%;
  }
  .col-lg-offset-right-5 {
    margin-right: 41.66666667%;
  }
  .col-lg-offset-right-4 {
    margin-right: 33.33333333%;
  }
  .col-lg-offset-right-3 {
    margin-right: 25%;
  }
  .col-lg-offset-right-2 {
    margin-right: 16.66666667%;
  }
  .col-lg-offset-right-1 {
    margin-right: 8.33333333%;
  }
  .col-lg-offset-right-0 {
    margin-right: 0;
  }
}
.alert-text-image-component {
  padding: 0;
}
.alert-text-image-component:before,
.alert-text-image-component:after {
  content: " ";
  display: table;
}
.alert-text-image-component:after {
  clear: both;
}
.alert-text-image-component:before,
.alert-text-image-component:after {
  content: " ";
  display: table;
}
.alert-text-image-component:after {
  clear: both;
}
.alert-text-image-component img {
  float: left !important;
  margin-right: 16px;
  margin-bottom: 16px;
}
.alert-text-image-component p {
  display: block;
}
.read-more-wrapper[data-readmore] {
  transition: height 500ms;
  overflow: hidden;
}
.fa-arrow-circle-down:before,
.fa-arrow-circle-up:before {
  color: #404041;
}
.teaser {
  margin-top: 16px;
}
.teaser.teaser-form .panel-heading {
  background: #fff;
}
.teaser.teaser-form .panel-heading h5 {
  position: static;
  top: 0;
  left: 0;
  text-align: left;
}
.teaser.teaser-form .panel-heading .control-label {
  color: #626366;
  padding: 0;
}
.teaser.teaser-form .panel-heading .form-group > [class*="col-"] {
  padding-right: 0;
}
.teaser .panel {
  margin-bottom: 15px;
  background-color: transparent;
  border: 0;
  border-radius: 10px 10px 0 0;
}
.teaser .panel-body {
  padding: 16px;
  background: #404041;
  border-radius: 0 0 10px 10px;
}
.teaser .panel-body h5 {
  padding-top: 0;
}
.teaser .panel-body a {
  color: #92D6E3;
  font-size: 13px;
  line-height: 16px;
  cursor: pointer;
}
.teaser .panel-body button,
.teaser .panel-body a.btn-teaser {
  font-size: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  line-height: 1.33;
  color: #92D6E3;
}
.teaser .panel-body .link-heading {
  padding-bottom: 4px;
}
.teaser .panel-body .link-heading a {
  color: #92D6E3;
  font-size: 16px;
  line-height: 16px;
  font-weight: 500;
}
.teaser .panel-body .pdf-list .pdfLink {
  color: #92D6E3;
  line-height: 18px;
}
.teaser .panel-body p:last-child {
  margin-bottom: 0;
}
.teaser .panel-heading {
  position: relative;
  background-color: #fff;
  padding: 16px 16px;
  border-bottom: 0;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  text-align: center;
}
.teaser .panel-heading > .dropdown .dropdown-toggle {
  color: inherit;
}
.teaser .panel-heading.no-pad {
  padding: 0;
}
.teaser .panel-heading.no-pad img {
  border-radius: 10px 10px 0 0;
}
.teaser .panel-heading.no-pad-LR {
  padding: 16px 0;
}
.teaser .panel-heading > h5 {
  position: absolute;
  top: 16px;
  right: 16px;
  line-height: 19px;
  font-weight: normal;
}
.teaser .panel-heading > h5.search-wizard {
  position: static;
  text-align: left;
}
.teaser .panel-heading > p.search-wizard {
  text-align: left;
  margin-bottom: 0px;
}
.teaser .panel-heading .form-group {
  margin-left: 0;
  margin-right: 0;
}
.ncmec-irs-forms {
  list-style: none;
  padding: 0;
  margin-bottom: 16px;
}
.ncmec-irs-forms li {
  line-height: 16px;
  padding-bottom: 10px;
}
.ncmec-irs-forms li:last-child {
  padding-bottom: 0;
}
.ncmec-irs-forms li a {
  background: url("../../images/pdf-icon-small.png") no-repeat 0 1px;
  padding-left: 20px;
}
.internal-Link-block-list {
  list-style: none;
}
.internal-Link-block-list li {
  color: #92D6E3;
  margin-bottom: 10px;
}
.internal-Link-block-list li:before {
  content: "• ";
  font-size: 28px;
  line-height: 16px;
  vertical-align: text-top;
}
.internal-Link-block-list li:last-child {
  margin-bottom: 0;
}
.daf-direct > .daf-direct-logo {
  float: left !important;
  padding-right: 16px;
}
.select-state {
  padding: 0 0 16px 0;
}
.select-state select {
  border: 0;
  color: #008DB6;
}
.missing-person-lists {
  list-style: none;
  padding: 0;
  line-height: 18px;
}
.missing-person-lists li {
  color: #F1F1F2;
  margin-bottom: 16px;
}
.missing-person-lists li:before,
.missing-person-lists li:after {
  content: " ";
  display: table;
}
.missing-person-lists li:after {
  clear: both;
}
.missing-person-lists li:before,
.missing-person-lists li:after {
  content: " ";
  display: table;
}
.missing-person-lists li:after {
  clear: both;
}
.missing-person-lists li img {
  float: left !important;
  margin-right: 16px;
}
.missing-person-lists li h5 {
  margin-bottom: 10px;
}
.missing-person-lists li small {
  font-size: 11px;
}
.missing-person-lists li .missing-person-link {
  padding-top: 10px;
}
.missing-person-link a {
  color: #92D6E3;
}
.missing-person-link a.active {
  color: #fff;
  font-weight: bold;
  text-decoration: underline;
}
.teaser-component .teaser .panel .panel-body h1,
.teaser-component .teaser .panel .panel-body h2,
.teaser-component .teaser .panel .panel-body h3,
.teaser-component .teaser .panel .panel-body h4,
.teaser-component .teaser .panel .panel-body h5,
.teaser-component .teaser .panel .panel-body h6 {
  color: #F1F1F2;
}
.teaser-component .teaser .panel .panel-body p,
.teaser-component .teaser .panel .panel-body span,
.teaser-component .teaser .panel .panel-body small {
  color: #F1F1F2;
}
.teaser-component .teaser .panel .panel-body a {
  font-size: 13px;
  line-height: 16px;
}
/* ... */

